@@ -1,0 +1,6 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<configuration>
+  <installers>
+    <install type="Castle.Windsor.Tests.Installers.CustomerInstaller"/>
+  </installers>
+</configuration>
